# AM3611

./: .gitignore  am3611.code-workspace
Assignment/Assignment 1/: GramSchmidt  GramSchmidt.cpp  GramSchmidt2  GramSchmidt2.cpp  problem1_2  problem1_2.cpp  problem1_3  problem1_3.cpp  problem1_5  problem1_5.cpp  problem1_6  problem1_6.cpp
Assignment/Assignment 2/: EulerMethod.cpp  problem2_2a.cpp  problem2_2b.cpp  problem2_2c.cpp  problem2_3.cpp  problem3_1.cpp  problem3_2.cpp  problem4_1.cpp  problem4_3  problem4_3.cpp
Assignment/Assignment 3/: FiniteDifference.cpp  problem5_1.cpp  problem5_4.cpp  problem5_5  problem5_5.cpp  problem5_7.cpp  test.cpp
Assignment/Assignment 4/: ComplexNumber.cpp  ComplexNumber.h  Fractal.cpp  Fractal.h  displayFractal.m  main.cpp  main_fractal.cpp  matrix.cpp  matrix.h
Assignment/Assignment 5/: problem8_2.cpp
Assignment/Assignment 5/Problem_7.3/: AbstractOdeSolver.cpp  AbstractOdeSolver.h  EulerMethod.cpp  EulerMethod.h  RungeKutta.cpp  RungeKutta.h  main_7_3.cpp
Assignment/Assignment 5/Problem_8.3/: ComplexNumber.cpp  ComplexNumber.h  List.cpp  List.h  problem8_3.cpp
Assignment/Assignment 5/Quadrature/: CMakeLists.txt  LeftRiemann.cpp  LeftRiemann.h  Midpoint.cpp  Midpoint.h  Quadrature.cpp  Quadrature.h  RightRiemann.cpp  RightRiemann.h  Simpsons.cpp  Simpsons.h  Trapezoid.cpp  Trapezoid.h  main.cpp  main_Quadrature.cpp
Getting Started/: HelloWorld.cpp  Session 1.cpp  helloworld
Project/: test for one unknown.nb  test for two known and plot.nb
test/: test  test.cpp
(+2 files in other folders)
